--- a/src/quan-ly-xbp-chi-tiet-thong-tin-xuat-ban-pham.html
+++ b/src/quan-ly-xbp-chi-tiet-thong-tin-xuat-ban-pham.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VMHT QLXB</title>
-    <link rel="icon" type="image/png" href="./assets/images/logo.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet"><link rel="stylesheet" href="./assets/vendor/icon-set/style.css">
+    <link rel="icon" type="image/png" href="./assets/images/logo.svg"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./assets/vendor/icon-set/style.css">
 <link rel="stylesheet" href="./assets/vendor/select2/dist/css/select2.min.css">
 <link rel="stylesheet" href="/assets/vendor/flatpickr/dist/flatpickr.min.css">
 <link rel="stylesheet" href="./assets/css/theme.min.css">
@@ -520,7 +520,7 @@
             <div class="col-lg-9 pr-lg-2">
               <div class="Card card card-middle    " id="bieuso"> 
                 <div class="card-body p-0">
-                  <div class="PreviewPage-submit d-flex flex-wrap mb-3 border-bottom">
+                  <div class="PreviewPage-submit d-flex flex-wrap mb-3 border">
                     <button class="Button btn    btn-primary middle " type="button"><i class="tio-checkmark-square-outlined mr-1"></i>Xét Duyệt XBP
                     </button>
                     <button class="Button btn    btn-soft-dark middle " type="button"><i class="tio-clear mr-1"></i>Từ chối
@@ -562,7 +562,7 @@
                     </div>
                   </div>
                   <div class="accordion">
-                    <div class="Accordion PreviewPage-margin" id="thongtinchung">
+                    <div class="Accordion" id="thongtinchung">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
@@ -627,7 +627,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="Accordion PreviewPage-margin" id="quanlycongviec">
+                    <div class="Accordion" id="quanlycongviec">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
@@ -804,7 +804,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="Accordion PreviewPage-margin" id="banthaofile">
+                    <div class="Accordion" id="banthaofile">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
@@ -1403,7 +1403,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="Accordion PreviewPage-margin" id="thongtinkhac">
+                    <div class="Accordion" id="thongtinkhac">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
@@ -1761,14 +1761,14 @@
                         </div>
                       </div>
                     </div>
-                    <div class="Accordion PreviewPage-margin" id="lichsuxuatbanpham">
+                    <div class="Accordion" id="lichsuxuatbanpham">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
                             <h3 class="card-header-title d-flex align-items-center">Lịch sử thao tác
                             </h3>
-                            <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion5" aria-expanded="true" aria-controls="Accordion5"><i class="tio-chevron-down"></i></div>
-                            <div class="Card-suffix-text ml-2">T3 - 30/06/2021</div>
+                            <div class="Card-suffix-text ml-auto mr-2"><i class="tio-date-range mr-1"></i>T3 - 30/06/2021</div>
+                            <div class="Card-collapse-arrow" role="button" data-toggle="collapse" data-target="#Accordion5" aria-expanded="true" aria-controls="Accordion5"><i class="tio-chevron-down"></i></div>
                           </div>
                           <div class="collapse show" id="Accordion5" data-parent="#AccordionParent">
                             <div class="card-body p-0">
@@ -1799,7 +1799,7 @@
                                 </table>
                                 <div class="Table-pagination d-flex align-items-center justify-content-between border-start border-end border-bottom">
                                   <div class="Table-pagination-perpage d-flex align-items-center"><span class="Table-pagination-perpage-text">Hiển thị:</span>
-                                    <div class="Select  ">
+                                    <div class="Select   ">
                                       <select class="js-select2-custom form-select" autocomplete="off" data-hs-select2-options="{ &quot;minimumResultsForSearch&quot;: &quot;-1&quot;, &quot;placeholder&quot;: &quot;undefined&quot; }">
                                         <option value="5">5</option>
                                         <option value="10">10</option>
@@ -1821,14 +1821,14 @@
                         </div>
                       </div>
                     </div>
-                    <div class="Accordion PreviewPage-margin" id="binhluanvaduyet">
+                    <div class="Accordion" id="binhluanvaduyet">
                       <div class="Accordion-parent" id="AccordionParent">
                         <div class="Card card card-middle    " id=""> 
                           <div class="card-header d-flex align-items-center justify-content-between">
                             <h3 class="card-header-title d-flex align-items-center">Bình luận và duyệt
                             </h3>
-                            <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion6" aria-expanded="true" aria-controls="Accordion6"><i class="tio-chevron-down"></i></div>
-                            <div class="Card-suffix-text ml-2">T3 - 30/06/2021</div>
+                            <div class="Card-suffix-text ml-auto mr-2"><i class="tio-date-range mr-1"></i>T3 - 30/06/2021</div>
+                            <div class="Card-collapse-arrow" role="button" data-toggle="collapse" data-target="#Accordion6" aria-expanded="true" aria-controls="Accordion6"><i class="tio-chevron-down"></i></div>
                           </div>
                           <div class="collapse show" id="Accordion6" data-parent="#AccordionParent">
                             <div class="card-body p-0">
@@ -1840,7 +1840,7 @@
                                       <th>Công đoạn</th>
                                       <th>Người bình luận</th>
                                       <th>Nội dung bình luận</th>
-                                      <th>Trạng thái</th>
+                                      <th class="text-center">Trạng thái</th>
                                       <th>Thời gian</th>
                                     </tr>
                                   </thead>
@@ -1914,7 +1914,7 @@
                                 </table>
                                 <div class="Table-pagination d-flex align-items-center justify-content-between border-start border-end border-bottom">
                                   <div class="Table-pagination-perpage d-flex align-items-center"><span class="Table-pagination-perpage-text">Hiển thị:</span>
-                                    <div class="Select  ">
+                                    <div class="Select   ">
                                       <select class="js-select2-custom form-select" autocomplete="off" data-hs-select2-options="{ &quot;minimumResultsForSearch&quot;: &quot;-1&quot;, &quot;placeholder&quot;: &quot;undefined&quot; }">
                                         <option value="5">5</option>
                                         <option value="10">10</option>
