--- a/src/xem-file-dinh-kem.html
+++ b/src/xem-file-dinh-kem.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VMHT QLXB</title>
-    <link rel="icon" type="image/png" href="./assets/images/logo.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet"><link rel="stylesheet" href="./assets/vendor/icon-set/style.css">
+    <link rel="icon" type="image/png" href="./assets/images/logo.svg"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./assets/vendor/icon-set/style.css">
 <link rel="stylesheet" href="./assets/vendor/select2/dist/css/select2.min.css">
 <link rel="stylesheet" href="/assets/vendor/flatpickr/dist/flatpickr.min.css">
 <link rel="stylesheet" href="./assets/css/theme.min.css">
@@ -677,7 +677,7 @@
                             </table>
                             <div class="Table-pagination d-flex align-items-center justify-content-between border-start border-end border-bottom">
                               <div class="Table-pagination-perpage d-flex align-items-center"><span class="Table-pagination-perpage-text">Hiển thị:</span>
-                                <div class="Select  ">
+                                <div class="Select   ">
                                   <select class="js-select2-custom form-select" autocomplete="off" data-hs-select2-options="{ &quot;minimumResultsForSearch&quot;: &quot;-1&quot;, &quot;placeholder&quot;: &quot;undefined&quot; }">
                                     <option value="5">5</option>
                                     <option value="10">10</option>
