--- a/src/khai-bao-dang-ky-xuat-ban-pham.html
+++ b/src/khai-bao-dang-ky-xuat-ban-pham.html
@@ -538,7 +538,7 @@
                             </h3>
                             <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion1" aria-expanded="true" aria-controls="Accordion1"><i class="tio-chevron-down"></i></div>
                           </div>
-                          <div class="collapse show" id="Accordion1" data-parent="#AccordionParent1">
+                          <div class="collapse show" id="Accordion1" data-parent="#AccordionParent1-65.0357128988007">
                             <div class="card-body">
                               <form action="#"> 
                                 <div class="row mb-3">
@@ -559,7 +559,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub1" aria-expanded="true" aria-controls="AccordionSub1"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub1" data-parent="#AccordionSubParent1">
+                                        <div class="collapse show" id="AccordionSub1" data-parent="#AccordionSubParent1-83.45312691222237">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
@@ -604,7 +604,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub2" aria-expanded="true" aria-controls="AccordionSub2"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub2" data-parent="#AccordionSubParent2">
+                                        <div class="collapse show" id="AccordionSub2" data-parent="#AccordionSubParent2-39.42235816320381">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -669,7 +669,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub3" aria-expanded="true" aria-controls="AccordionSub3"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub3" data-parent="#AccordionSubParent3">
+                                        <div class="collapse show" id="AccordionSub3" data-parent="#AccordionSubParent3-55.07297803214448">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
@@ -736,7 +736,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub4" aria-expanded="true" aria-controls="AccordionSub4"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub4" data-parent="#AccordionSubParent4">
+                                        <div class="collapse show" id="AccordionSub4" data-parent="#AccordionSubParent4-91.84802785576129">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -868,7 +868,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub5" aria-expanded="true" aria-controls="AccordionSub5"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub5" data-parent="#AccordionSubParent5">
+                                        <div class="collapse show" id="AccordionSub5" data-parent="#AccordionSubParent5-10.981672804683274">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -911,7 +911,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub6" aria-expanded="true" aria-controls="AccordionSub6"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub6" data-parent="#AccordionSubParent6">
+                                        <div class="collapse show" id="AccordionSub6" data-parent="#AccordionSubParent6-94.99764461300471">
                                           <div class="card-body">
                                             <div class="FormPage-switch-wrapper">
                                               <div class="row"> 
@@ -958,7 +958,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub7" aria-expanded="true" aria-controls="AccordionSub7"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub7" data-parent="#AccordionSubParent7">
+                                        <div class="collapse show" id="AccordionSub7" data-parent="#AccordionSubParent7-38.32672299774933">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1017,7 +1017,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub8" aria-expanded="true" aria-controls="AccordionSub8"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub8" data-parent="#AccordionSubParent8">
+                                        <div class="collapse show" id="AccordionSub8" data-parent="#AccordionSubParent8-51.64139369146148">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1120,7 +1120,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub9" aria-expanded="true" aria-controls="AccordionSub9"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub9" data-parent="#AccordionSubParent9">
+                                        <div class="collapse show" id="AccordionSub9" data-parent="#AccordionSubParent9-57.0282276632603">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1221,7 +1221,7 @@
                                           </h3>
                                           <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#AccordionSub10" aria-expanded="true" aria-controls="AccordionSub10"><i class="tio-chevron-down"></i></div>
                                         </div>
-                                        <div class="collapse show" id="AccordionSub10" data-parent="#AccordionSubParent10">
+                                        <div class="collapse show" id="AccordionSub10" data-parent="#AccordionSubParent10-6.464267021844727">
                                           <div class="card-body">
                                             <div class="row"> 
                                               <div class="col-md-6 col-sm-12 mb-3">
@@ -1309,7 +1309,7 @@
                             </h3>
                             <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion2" aria-expanded="true" aria-controls="Accordion2"><i class="tio-chevron-down"></i></div>
                           </div>
-                          <div class="collapse show" id="Accordion2" data-parent="#AccordionParent2">
+                          <div class="collapse show" id="Accordion2" data-parent="#AccordionParent2-11.480970498453313">
                             <div class="card-body">
                               <form action="#"> 
                                 <div class="Tab mb-3 ">
@@ -1908,7 +1908,7 @@
                             </h3>
                             <div class="Card-collapse-arrow ml-auto" role="button" data-toggle="collapse" data-target="#Accordion3" aria-expanded="true" aria-controls="Accordion3"><i class="tio-chevron-down"></i></div>
                           </div>
-                          <div class="collapse show" id="Accordion3" data-parent="#AccordionParent3">
+                          <div class="collapse show" id="Accordion3" data-parent="#AccordionParent3-82.24316683529229">
                             <div class="card-body">
                               <form action="#"> 
                                 <div class="row">
